@@ -221,19 +221,27 @@ EXCLUDE_mcs51-small-stack-auto += \
 EXCLUDE_mcs51-large-stack-auto += \
 	gte_pr30185
 
+# SDCC Bug #3540
+	EXCLUDE_mcs51-large-stack-auto += \
+	gte_pr58365
+
 # Target does not yet support struct/union return
 EXCLUDE_hc08 += \
 	gte_991019-1 \
-	gte_pr30185
+	gte_pr30185 \
+	gte_pr58365
 EXCLUDE_s08 += \
 	gte_991019-1 \
-	gte_pr30185
+	gte_pr30185 \
+	gte_pr58365
 EXCLUDE_ds390 += \
 	gte_991019-1 \
-	gte_pr30185
+	gte_pr30185 \
+	gte_pr58365
 EXCLUDE_uc6502 += \
 	gte_991019-1 \
-	gte_pr30185
+	gte_pr30185 \
+	gte_pr58365
 
 # TODO: Check these
 EXCLUDE_ARCH_pdk += \
